--- a/app/src/main/res/layout/item_learning_materials.xml
+++ b/app/src/main/res/layout/item_learning_materials.xml
@@ -98,7 +98,7 @@
                 android:id="@+id/tvDesc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tvLipsum"
+                tools:text="@tools:sample/lorem/random"
                 android:textColor="@color/black"
                 app:layout_constraintTop_toBottomOf="@+id/tvDescTitle"
                 app:layout_constraintStart_toStartOf="@+id/tvDescTitle"/>
