--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.about.fragment.AboutFragment">
+
+    <include
+        android:id="@+id/toolbarAbout"
+        layout="@layout/toolbar_about"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvAboutParentCategory"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:scrollbars="none"
+        android:overScrollMode="never"
+        tools:listitem="@layout/item_about_parent"
+        tools:itemCount="2"
+        app:layout_constraintTop_toBottomOf="@id/toolbarAbout"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
