--- a/app/src/main/res/layout/item_about_parent.xml
+++ b/app/src/main/res/layout/item_about_parent.xml
@@ -13,11 +13,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginHorizontal="8dp"
-        tools:text="@string/app_name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/purple_700"
-        app:layout_constraintTop_toBottomOf="parent"
+        tools:text="@string/app_name"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
