--- a/app/src/main/res/layout/item_about.xml
+++ b/app/src/main/res/layout/item_about.xml
@@ -3,11 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardCategoryChild"
+    android:id="@+id/cardAbout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="2dp"
-    android:layout_marginHorizontal="10dp"
+    android:layout_margin="2dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
@@ -25,7 +24,8 @@
             android:layout_height="40dp"
             android:contentDescription="@null"
             android:layout_marginStart="4dp"
-            android:layout_marginVertical="2dp"
+            android:layout_marginVertical="8dp"
+            android:padding="4dp"
             android:src="@drawable/ic_update"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
