--- a/app/src/main/res/layout/item_about.xml
+++ b/app/src/main/res/layout/item_about.xml
@@ -6,13 +6,14 @@
     android:id="@+id/cardAbout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginHorizontal="4dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="5dp"
     app:cardUseCompatPadding="false"
-    app:cardElevation="1dp">
+    app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -20,12 +21,11 @@
 
         <ImageView
             android:id="@+id/imgAbout"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:padding="15dp"
             android:contentDescription="@null"
-            android:layout_marginStart="4dp"
-            android:layout_marginVertical="8dp"
-            android:padding="4dp"
+            android:background="@color/purple_700"
             android:src="@drawable/ic_update"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,24 +35,26 @@
             android:id="@+id/tvAboutTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="8dp"
             android:fontFamily="sans-serif-medium"
             tools:text="@string/app_name"
-            android:textSize="16sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/purple_700"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="@id/imgAbout"
+            app:layout_constraintVertical_bias="0.2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/imgAbout"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/tvAboutDesc"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="@string/tvAppVersion"
+            android:textSize="16sp"
             android:textColor="@color/black"
             app:layout_constraintTop_toBottomOf="@id/tvAboutTitle"
-            app:layout_constraintBottom_toBottomOf="@id/imgAbout"
             app:layout_constraintStart_toStartOf="@id/tvAboutTitle"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
