--- a/app/src/main/res/layout/toolbar_general_center.xml
+++ b/app/src/main/res/layout/toolbar_general_center.xml
@@ -15,6 +15,6 @@
         android:text="@string/icAbout"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:textSize="16sp"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
 </androidx.appcompat.widget.Toolbar>
