--- a/app/src/main/res/layout/toolbar_general_center.xml
+++ b/app/src/main/res/layout/toolbar_general_center.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbarAbout"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
@@ -12,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/icAbout"
+        tools:text="@string/app_name"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
