--- a/app/src/main/res/layout/fragment_kotlin_basic.xml
+++ b/app/src/main/res/layout/fragment_kotlin_basic.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.kotlinbasic.fragment.KotlinBasicFragment">
+    tools:context=".ui.listcourses.fragment.KotlinBasicFragment">
 
     <include
         android:id="@+id/toolbarMain"
