--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,20 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.taufik.kotlinhero.ui.home.HomeFragment"
+        android:name="com.taufik.kotlinhero.ui.home.fragment.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/subjectTutorialFragment"
+        android:name="com.taufik.kotlinhero.ui.home.adapter.SubjectTutorialFragment"
+        android:label="fragment_subject_tutorial"
+        tools:layout="@layout/fragment_subject_tutorial" />
+
+    <fragment
+        android:id="@+id/kotlinBasicFragment"
+        android:name="com.taufik.kotlinhero.ui.listcourses.fragment.KotlinBasicFragment"
+        android:label="fragment_kotlin_basic"
+        tools:layout="@layout/fragment_kotlin_basic" />
     <fragment
         android:id="@+id/nav_favorite"
         android:name="com.taufik.kotlinhero.ui.favorite.fragment.FavoriteFragment"
@@ -20,39 +31,4 @@
         android:name="com.taufik.kotlinhero.ui.about.fragment.AboutFragment"
         android:label="fragment_about"
         tools:layout="@layout/fragment_about" />
-    <fragment
-        android:id="@+id/kotlinBasicFragment"
-        android:name="com.taufik.kotlinhero.ui.home.kotlinbasic.fragment.KotlinBasicFragment"
-        android:label="fragment_kotlin_basic"
-        tools:layout="@layout/fragment_kotlin_basic" />
-    <fragment
-        android:id="@+id/kotlinOOPFragment"
-        android:name="com.taufik.kotlinhero.ui.home.kotlinoop.fragment.KotlinOOPFragment"
-        android:label="fragment_kotlin_oop"
-        tools:layout="@layout/fragment_kotlin_oop" />
-    <fragment
-        android:id="@+id/kotlinCollectionFragment"
-        android:name="com.taufik.kotlinhero.ui.home.kotlincollection.fragment.KotlinCollectionFragment"
-        android:label="fragment_kotlin_collection"
-        tools:layout="@layout/fragment_kotlin_collection" />
-    <fragment
-        android:id="@+id/kotlinCoroutineFragment"
-        android:name="com.taufik.kotlinhero.ui.home.kotlincoroutine.fragment.KotlinCoroutineFragment"
-        android:label="fragment_kotlin_coroutine"
-        tools:layout="@layout/fragment_kotlin_coroutine" />
-    <fragment
-        android:id="@+id/kotlinUnitTestingFragment"
-        android:name="com.taufik.kotlinhero.ui.home.kotlinunittesting.fragment.KotlinUnitTestingFragment"
-        android:label="fragment_kotlin_unit_testing"
-        tools:layout="@layout/fragment_kotlin_unit_testing" />
-    <fragment
-        android:id="@+id/subjectTutorialFragment"
-        android:name="com.taufik.kotlinhero.ui.home.SubjectTutorialFragment"
-        android:label="fragment_subject_tutorial"
-        tools:layout="@layout/fragment_subject_tutorial" />
-    <fragment
-        android:id="@+id/kotlinGenericFragment"
-        android:name="com.taufik.kotlinhero.ui.home.kotlingeneric.fragment.KotlinGenericFragment"
-        android:label="fragment_kotlin_generic"
-        tools:layout="@layout/fragment_kotlin_generic" />
 </navigation>
